vlib/v/checker/tests/modules/deprecated_consts.out
vlib/v/checker/tests/modules/deprecated_consts/consts.v:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module deprecated_consts
      | ^
    2 | 
    3 | @[deprecated: 'use built-in constant min_i8 instead']
